# reply-router

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml
api/: approvals.py  health.py  index.py  reconcile.py  replies.py
clients/: _test.json  clear_facility.json
docs/: LAUNCH_RUNBOOK.md  MORNING_BRIEF_20260521.md  ghl_ui_setup_tasks.md  smartlead-api-research.md  smartlead_sequence_templates.md
docs/client_communications/: 2026-05-20_shawn_business_context_request.md  2026-05-20_shawn_email_draft.md  2026-05-21_shawn_status_update.md
reply_router/: approvals.py  classifier.py  config.py  dedupe.py  event_handlers.py  ghl_client.py  orchestrator.py  qualification_ui.py  qualifier.py  reconciler.py  responder.py  routing.py  slack_client.py  smartlead_client.py
scripts/: configure_smartlead_webhook.py  gen_test_qualify_url.py  provision_ghl_tags.py  provision_qualification_setup.py  refactor_ghl_pipeline.py  verify_ghl_field_ids.py
tests/: conftest.py  smoke_classifier.py  smoke_ghl.py  smoke_loop_prevention.py  smoke_responder.py  smoke_slack.py  smoke_smartlead.py
tests/unit/: test_api_approvals.py  test_api_ghl_stage_change.py  test_api_health.py  test_api_qualify.py  test_api_reconcile.py  test_api_replies.py  test_approvals.py  test_classifier.py  test_config.py  test_dedupe.py  test_event_handlers.py  test_ghl_client.py  test_orchestrator.py  test_responder.py  test_routing.py  test_slack_client.py  test_smartlead_client.py  test_smoke.py
(+17 files in other folders)
