[project]
name = "reply-router"
version = "0.1.0"
requires-python = ">=3.13"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "responses>=0.25",      # stubbing requests-based clients
    "freezegun>=1.4",       # deterministic time in tests
    "httpx>=0.27",          # FastAPI TestClient backend
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
